tests/ui/resolve/issue-6702.stderr
error[E0423]: cannot find function, tuple struct or tuple variant `Monster` in this scope
  --> $DIR/issue-6702.rs:7:14
   |
LL | / struct Monster {
LL | |     damage: isize
LL | | }
   | |_- `Monster` defined here
...
LL |       let _m = Monster();
   |                ^^^^^^^^^ help: use struct literal syntax instead: `Monster { damage: val }`
   |
   = note: a struct named `Monster` exists in another namespace

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0423`.
